# gb-game-verifier

./: .gitignore  .mcp.json  CONTRIBUTING.md  README.md  SCORECARD.md  diff_report.py  pyproject.toml  regression_test.py  run_comparison.sh  run_suite.sh  summary.py  timeline.py
checkpoints_final/: actions_final.npy
configs/: penta_dragon.yaml
gbenv/: __init__.py  color_verify.py  frame_diff.py  gb_env.py  ghidra_integration.py  input_responsiveness.py  policy_transfer.py  re_discovery.py  sprite_count_compare.py  train.py
gym/: __init__.py  gb_env.py  mgba_integration.py  pipeline.py  train.py  trajectory_compare.py
lua/: configurable_dumper.lua  full_dumper.lua  input_recorder.lua  memory_scanner.lua  sprite_counter.lua
pipeline_output/: FINAL_REPORT.json  enhanced_reward_config.json  stage125_comprehensive.json  stage12_hp_analysis.json  stage12_og_init_timing.json  stage12_room_mechanism.json  stage12_scx_analysis.json  stage12_scy_timing.json  stage1_ghidra_analysis.json  stage2_runtime_analysis.json  stage4_transfer_report.json  stage4_v10_scy_tick.json  stage4_v11_final.json  stage4_v14_phase_aligned.json  stage4_v15_room_interval.json  stage4_v2_report.json  stage4_v3_report.json  stage4_v4_memrl_report.json  stage4_v5_corrected_report.json  stage4_v6_stabilized.json  stage4_v7_final.json  stage4_v8_scy_fix.json  stage5_colorization.json  stage5_form_toggle_test.json  stage5_v2_colorization.json  stage5_v3_analysis.json  stage5_v4_oam_comparison.json  stage5_v5_extended.json  sync_capture.lua
